--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ set(CMAKE_CXX_STANDARD 20)
 project(VolumeRenderer CXX)
 
 add_executable(VolumeRenderer 
-	
+	VertexShader.hlsl
+	PixelShader.hlsl
+
 	Types.h 
 	DescriptorHeap.h 
 	Queue.h
@@ -19,13 +21,17 @@ add_executable(VolumeRenderer
 	Main.cpp
 )
 
-#set_source_files_properties(Shader.hlsl PROPERTIES VS_SHADER_TYPE "Library" VS_SHADER_MODEL "6.3" VS_SHADER_VARIABLE_NAME "compiledShader" VS_SHADER_OUTPUT_HEADER_FILE "shader.fxh")
+set_source_files_properties(VertexShader.hlsl PROPERTIES VS_SHADER_TYPE "Vertex" VS_SHADER_MODEL "6.6" VS_SHADER_ENTRYPOINT "VSMain" VS_SHADER_DISABLE_OPTIMIZATIONS true VS_SHADER_ENABLE_DEBUG true
+	VS_SHADER_OBJECT_FILE_NAME "${CMAKE_BINARY_DIR}/VertexShader.cso")
+set_source_files_properties(PixelShader.hlsl PROPERTIES VS_SHADER_TYPE "Pixel" VS_SHADER_MODEL "6.6" VS_SHADER_ENTRYPOINT "PSMain" VS_SHADER_DISABLE_OPTIMIZATIONS true VS_SHADER_ENABLE_DEBUG true
+	VS_SHADER_OBJECT_FILE_NAME "${CMAKE_BINARY_DIR}/PixelShader.cso")
 
-#target_include_directories(VolumeRenderer PRIVATE ${CMAKE_BINARY_DIR})
+target_include_directories(VolumeRenderer PRIVATE ${CMAKE_BINARY_DIR})
 
 target_link_libraries(
 	VolumeRenderer PUBLIC
 	d3d12
+	d3dcompiler
 	dxgi
 	user32
 )
